--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 # Site
 title: Sprheany
-subtitle: ""
+subtitle: "Android developer"
 description: "Sprheany's blog."
 keywords: [sprheany, android, flutter, developer, blog]
 author: Sprheany
