add categories, search

--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ subtitle: "Android developer"
 description: "Sprheany's blog."
 keywords: [sprheany, android, flutter, developer, blog]
 author: Sprheany
-language: en
+language: zh-CN
 timezone: "Asia/Shanghai"
 
 # URL
